--- a/index.html
+++ b/index.html
@@ -69,16 +69,18 @@
             <div class="col">
               <h1>Hello, I'm Devlin!</h1>
               <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-                aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-                aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor
-                in hendrerit in vulputate velit esse molestie consequat, vel
-                illum dolore eu feugiat nulla facilisis at vero eros et accumsan
-                et iusto odio dignissim qui blandit praesent luptatum zzril
-                delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum
-                dolor sit amet, cons ectetuer
+                I am a Creative Design Technologist and Artist based in Toronto,
+                Ontario, Canada. I'm interested in the wonderful and exciting
+                world of New Media art and education, and especially interested
+                in generative art, drawing plotters, and interactive
+                installation. I'm very excited to be applying to the Future
+                Sketches group at the MIT Media Lab, and I thank you for
+                learning about me through my work. Enjoy!
+
+                <br /><br />
+
+                You can also read my Statement of Objectives
+                <a href="personal-statement.html">here</a>
               </p>
             </div>
             <!-- <div class="col"></div> -->
@@ -86,12 +88,12 @@
               <div class="row">
                 <div class="col">
                   <h6>Jump to:</h6>
-                  <a class="nav-link" href="#icfwywm">ICFWYWM</a>
-                  <a class="nav-link" href="#flux">Flux</a>
-                  <a class="nav-link" href="#light-clock">Light Clock</a>
-                  <a class="nav-link" href="#contours">Contours</a>
-                  <a class="nav-link" href="#brain">Illuminated Brain</a>
-                  <a class="nav-link" href="#plotter">Pen Plotter</a>
+                  <a href="#icfwywm">ICFWYWM <br /></a>
+                  <a href="#flux">Flux<br /></a>
+                  <a href="#light-clock">Light Clock<br /></a>
+                  <a href="#contours">Contours<br /></a>
+                  <a href="#brain">Illuminated Brain<br /></a>
+                  <a href="#plotter">Pen Plotter<br /></a>
                 </div>
               </div>
               <div class="row margintop-sm info-square">
@@ -105,31 +107,6 @@
               </div>
             </div>
           </div>
-
-          <!--
-            <div class="hero-container margintop-lg">
-                <div class="hero-details hidden-mobile">
-                    <span>- Featured Project</span>
-                    <a href="#">
-                        <h3>I Can't Focus When You're Watching Me (ICFWYWM)</h3>
-                    </a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ullamcorper dui, id molestie
-                        ligula. </p>
-                </div>
-                <div class="hero-button hidden-mobile">
-                    <a href="" class="portfolio-link">See case study <i class="icon ion-md-add-circle"></i></a>
-                </div>
-                <img src="assets/images/hero-01.jpg" class="img-fluid"
-                    alt="Smartwatch image by Luke Chesser from Unsplash">
-                <div class="mobile-only margintop-sm">
-                    <span>- Featured Project</span>
-                    <h3>Smartwatch User Interaction</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae ullamcorper dui, id molestie
-                        ligula.</p>
-                </div>
-                <a href="" class="primary-btn mobile-only">See case study <i class="icon ion-md-add-circle"></i></a>
-            </div>
-            -->
         </div>
       </section>
 
@@ -140,16 +117,6 @@
       </nav>
 
       <section id="portfolio" class="work margintop-lg">
-        <div class="container" style="border: none">
-          <div class="heading-content">
-            <h1>Selected Works</h1>
-            <p class="margintop-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae
-              ullamcorper dui, id molestie ligula. Vestibulum a urna vel est
-              rhoncus semper et sed libero.
-            </p>
-          </div>
-        </div>
         <div class="container margintop-lg" id="icfwywm">
           <div class="row">
             <div class="col">
@@ -172,23 +139,17 @@
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <a href="assets/images/icfwywm1.jpg" target="_blank">
-                    <img src="assets/images/icfwywm1.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/icfwywm1.jpg" />
                 </div>
                 <div class="col">
-                  <a href="assets/images/icfwywm2.jpg" target="_blank">
-                    <img src="assets/images/icfwywm2.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/icfwywm2.jpg" />
                 </div>
               </div>
               <div class="row margintop-sm">
                 <div class="col">
-                  <a href="assets/images/timelapse.mp4" target="_blank">
-                    <video width="100%" autoplay muted loop>
-                      <source src="assets/images/timelapse.mp4" />
-                    </video>
-                  </a>
+                  <video width="100%" autoplay muted loop controls>
+                    <source src="assets/images/timelapse.mp4" />
+                  </video>
                 </div>
               </div>
             </div>
@@ -240,9 +201,7 @@
             <div class="col">
               <div class="row">
                 <div class="col">
-                  <a href="assets/images/icfwywm3.jpg" target="_blank">
-                    <img src="assets/images/icfwywm3.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/icfwywm3.jpg" />
                 </div>
               </div>
               <div class="row margintop-sm">
@@ -288,13 +247,7 @@
               </div>
 
               <div class="col">
-                <video
-                  width="100%"
-                  autoplay
-                  muted
-                  loop
-                  style="border-radius: 5px"
-                >
+                <video width="100%" autoplay muted loop controls>
                   <source src="assets/images/flux video.mp4" type="video/mp4" />
                 </video>
               </div>
@@ -304,22 +257,16 @@
               <div class="col">
                 <div class="row">
                   <div class="col">
-                    <a href="assets/images/ceilingsim.gif" target="_blank">
-                      <img src="assets/images/ceilingsim.gif" />
-                    </a>
+                    <img class="Imgs" src="assets/images/ceilingsim.gif" />
                   </div>
                   <div class="col">
-                    <a href="assets/images/flux4.jpg" target="_blank">
-                      <img src="assets/images/flux4.jpg" />
-                    </a>
+                    <img class="Imgs" src="assets/images/flux4.jpg" />
                   </div>
                 </div>
 
                 <div class="row margintop-sm">
                   <div class="col">
-                    <a href="assets/images/flux2.jpg" target="_blank">
-                      <img src="assets/images/flux2.jpg" />
-                    </a>
+                    <img class="Imgs" src="assets/images/flux2.jpg" />
                   </div>
                 </div>
               </div>
@@ -362,14 +309,15 @@
               </div>
               <div class="row margintop-sm">
                 <div class="col">
-                  <a href="assets/images/clock1.jpg" target="_blank">
-                    <img src="assets/images/clock1.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/clock1.jpg" />
                 </div>
                 <div class="col">
-                  <a href="assets/images/clock2.jpg" target="_blank">
-                    <img src="assets/images/clock2.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/clock2.jpg" />
+                </div>
+              </div>
+              <div class="row margintop-sm">
+                <div class="col">
+                  <img class="Imgs" src="assets/images/clock3.jpg" />
                 </div>
               </div>
             </div>
@@ -393,14 +341,16 @@
               </div>
               <div class="row margintop-sm">
                 <div class="col">
-                  <a href="assets/images/contours1.jpg" target="_blank">
-                    <img src="assets/images/contours1.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/contours1.jpg" />
                 </div>
                 <div class="col">
-                  <a href="assets/images/contours2.jpg" target="_blank">
-                    <img src="assets/images/contours2.jpg" />
-                  </a>
+                  <img class="Imgs" src="assets/images/contours2.jpg" />
+                </div>
+              </div>
+
+              <div class="row margintop-sm">
+                <div class="col">
+                  <img class="Imgs" src="assets/images/contours3.jpg" />
                 </div>
               </div>
             </div>
@@ -443,14 +393,10 @@
               <div class="col">
                 <div class="row margintop-sm">
                   <div class="col">
-                    <a href="assets/images/brain1.jpg" target="_blank">
-                      <img src="assets/images/brain1.jpg" />
-                    </a>
+                    <img class="Imgs" src="assets/images/brain1.jpg" />
                   </div>
                   <div class="col">
-                    <a href="assets/images/brain2.jpg" target="_blank">
-                      <img src="assets/images/brain2.jpg" />
-                    </a>
+                    <img class="Imgs" src="assets/images/brain2.jpg" />
                   </div>
                 </div>
               </div>
@@ -478,29 +424,22 @@
                 </p>
               </div>
               <div class="col">
-                <a href="assets/images/drawing.gif" target="_blank">
-                  <img src="assets/images/drawing.gif" />
-                </a>
+                <img class="Imgs" src="assets/images/drawing.gif" />
+              </div>
+            </div>
+            <div class="row margintop-sm">
+              <div class="col">
+                <img class="Imgs" src="assets/images/plot1.png" />
+              </div>
+              <div class="col">
+                <img class="Imgs" src="assets/images/plot2.png" />
+              </div>
+              <div class="col">
+                <img class="Imgs" src="assets/images/plot3.png" />
               </div>
             </div>
           </div>
-          <div class="row margintop-sm">
-            <div class="col">
-              <a href="assets/images/plot1.png" target="_blank">
-                <img src="assets/images/plot1.png" />
-              </a>
-            </div>
-            <div class="col">
-              <a href="assets/images/plot2.png" target="_blank">
-                <img src="assets/images/plot2.png" />
-              </a>
-            </div>
-            <div class="col">
-              <a href="assets/images/plot3.png" target="_blank">
-                <img src="assets/images/plot3.png" />
-              </a>
-            </div>
-          </div>
+
           <div class="row margintop-sm"></div>
         </div>
       </section>
@@ -511,23 +450,64 @@
 
           <ul class="list-inline margintop-sm">
             <li class="list-inline-item">
-              <a href="#"><i class="icon ion-logo-facebook"></i></a>
+              <a href="https://twitter.com/devlindfm" target="_blank"
+                ><i class="icon ion-logo-twitter"></i
+              ></a>
             </li>
             <li class="list-inline-item">
-              <a href="#"><i class="icon ion-logo-twitter"></i></a>
+              <a href="https://www.instagram.com/devlindfm/" target="_blank"
+                ><i class="icon ion-logo-instagram"></i
+              ></a>
             </li>
             <li class="list-inline-item">
-              <a href="#"><i class="icon ion-logo-dribbble"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#"><i class="icon ion-logo-instagram"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#"><i class="icon ion-logo-linkedin"></i></a>
+              <a
+                href="https://www.linkedin.com/in/devlin-m-1b2495121/"
+                target="_blank"
+                ><i class="icon ion-logo-linkedin"></i
+              ></a>
             </li>
           </ul>
         </div>
       </section>
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+        <!-- The Close Button -->
+        <span class="close">&times;</span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="img01" />
+
+        <!-- Modal Caption (Image Text) -->
+        <div id="caption"></div>
+      </div>
     </div>
   </body>
+
+  <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the image and insert it inside the modal - use its "alt" text as a caption
+    var imgs = document.getElementsByClassName("Imgs");
+    var modalImg = document.getElementById("img01");
+    var captionText = document.getElementById("caption");
+
+    for (var i = 0; i < imgs.length; i++) {
+      var img = imgs[i];
+      // and attach our click listener for this image.
+      img.onclick = function (evt) {
+        modal.style.display = "block";
+        modalImg.src = this.src;
+        captionText.innerHTML = this.alt;
+      };
+    }
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+      modal.style.display = "none";
+    };
+  </script>
 </html>
