--- a/personal-statement.html
+++ b/personal-statement.html
@@ -55,16 +55,20 @@
 
     <title>Devlin Macpherson - Future Sketches Portfolio</title>
 
-    <!-- p5.js -->
-    <script src="scripts/p5.js"></script>
-    <!-- <script src="../libraries/p5.sound.js"></script> -->
-    <script src="scripts/script.js"></script>
+    <script>
+      if (window.screen.width > 575.98) {
+        document.write(
+          '<script src="scripts/p5.js"><\/script>' +
+            '<script src="scripts/script.js"><\/script>'
+        );
+      }
+    </script>
   </head>
 
   <body>
     <div id="body">
       <section class="work">
-        <div class="container" style="margin-top: 200px">
+        <div class="container intro">
           <div class="row">
             <div class="col">
               <a href="index.html">back</a>
