--- a/personal-statement.html
+++ b/personal-statement.html
@@ -55,12 +55,23 @@
 
     <title>Devlin Macpherson - Future Sketches Portfolio</title>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
       if (window.screen.width > 575.98) {
-        document.write(
-          '<script src="scripts/p5.js"><\/script>' +
-            '<script src="scripts/script.js"><\/script>'
-        );
+        loadScriptFile("scripts/p5.js");
+        loadScriptFile("scripts/script.js");
+      }
+
+      // loadScriptFile func
+      function loadScriptFile(src) {
+        // create element <script>
+        const $script = $("<script>");
+        // add type attribute
+        $script.attr("type", "text/javascript");
+        // add src attribute
+        $script.attr("src", src);
+        // append the <script> element to <head>
+        $script.appendTo("head");
       }
     </script>
   </head>
