--- a/personal-statement.html
+++ b/personal-statement.html
@@ -90,12 +90,12 @@
               <p>
                 The catalyst for my creative career was watching my grandpa
                 running around his backyard with a yard waste bag over his head
-                while I gleefully dodged him, and the wickets he had stuck in
-                the ground. He was an expert at playing - the type of play where
-                the rules are fluid and no one is quite sure who is winning, but
-                it’s probably everyone. Watching my grandpa play was a
-                masterclass in the creative act and has guided me in my own
-                creative process: starting with a spark of fun, pulling that
+                while I gleefully dodged him, running around the wickets he had
+                stuck in the ground. He was an expert at playing - the type of
+                play where the rules are fluid and no one is quite sure who is
+                winning, but it’s probably everyone. Watching my grandpa play
+                was a masterclass in the creative act and has guided me in my
+                own creative process: starting with a spark of fun, pulling that
                 thread, and adding layers until something beautiful and
                 interesting comes of it. This is reflected in my undergraduate
                 thesis piece, “I Can’t Focus When You’re Watching Me” for the
@@ -180,8 +180,7 @@
                 stuck behind a wall of troubleshooting and debugging. The
                 projects I have in mind could smooth out some common speed bumps
                 that I’ve encountered within my creative process, and make it
-                easier for others to find a more direct path from idea to
-                reality.
+                easier for others to find a more direct path to discovery.
                 <br /><br />
               </p>
             </div>
