--- a/index.html
+++ b/index.html
@@ -197,20 +197,28 @@
             <div class="col-sm">
               <p>
                 This piece has existed in two forms. It was originally created
-                for my undergraduate showcase, a virtual exhibition. This
-                allowed the piece to exist in a controlled environment.<br /><br />The
-                second version of this project was exhibited in person,
-                introducing a new set of challenges: The aesthetics and
-                robustness of the machine, and the presence sensing of the
-                audience. The first challenge was solved by hacking an HP7475a
-                pen plotter from the 1980s - chosen for its simplicity and
-                reliability. The challenge of presence sensing was solved using
-                computer vision to detect faces. Ultimately, this fundamentally
-                altered the interaction with the audience. In this form, the
-                machine could be observed from many angles without triggering a
-                reaction. Only when someone put their face up close and personal
-                to the plotter would it trigger its nervous scribbling. Quite an
-                entertaining interaction to observe!
+                for my undergraduate showcase. As the pandemic forced us online,
+                the challenge of creating an interactive piece for a virtual
+                exhibition was bittersweet. While missing out on the excitement
+                of an in-person show, it allowed the piece to exist in a
+                controlled environment -- my apartment. Being observed through a
+                livestream, the machine had complete confidence when it was
+                being observed. This meant that no viewer ever saw it completing
+                it's preferred task. They only experienced the disturbance
+                caused by their presence.<br /><br />The second version of this
+                project was exhibited in person, introducing a new set of
+                challenges: The aesthetics and robustness of the machine, and
+                the presence sensing of the audience. The first challenge was
+                solved by hacking an HP7475a pen plotter from the 1980s - chosen
+                for its simplicity and reliability. The challenge of presence
+                sensing was solved using computer vision to detect faces.
+                Ultimately, this fundamentally altered the interaction with the
+                audience. In this form, the machine could be observed from many
+                angles without triggering a reaction. Only when someone put
+                their face up close and personal to the plotter would it trigger
+                its nervous scribbling. This interaction created a new
+                relationship between the machine and the viewer as it became a
+                conscious decision to disturb the machines hard work.
               </p>
             </div>
 
@@ -256,9 +264,14 @@
                   As part of my work at Devicist Design Works, We designed and
                   built a 40-foot kinetic permanent installation for Shopify's
                   Offices in Toronto. Metallic prisms are rotated in coordinated
-                  patterns to create rolling waves of refracted light. I
-                  designed the form and movement patterns, and built the system
-                  controlling the stepper motors that drive the installation.
+                  patterns to create rolling waves of refracted light. We were
+                  given quite a bit of freedom in the design process, with the
+                  only specification being that it "flowed". I came up with the
+                  design of rows of rotating paired prisms and then developed
+                  movement patterns to take advantage of this form. I also built
+                  the software that controlled the stepper motors including
+                  start-up sequences and checks, timings, transitions between
+                  movement patterns, and error handling.
                 </p>
               </div>
 
@@ -295,11 +308,14 @@
                   pair of motors is driven by an arduino, and a Raspberry Pi is
                   the brain of the operation. <br /><br />
                   Working with a larger company, and being beholden to their
-                  fabrication schedules, I also had to develop internal software
-                  for testing. This involved creating a 3D rendered simulation
-                  of the installation that could interface with our control
-                  software, allowing us to test patterns and timings before it
-                  was physically built.
+                  fabrication schedules, the finished construction of the prisms
+                  and frame were not complete until weeks before installation.
+                  To mitigate this tight timeline, I developed internal
+                  simulation software that mimicked the functionality of the
+                  networked stepper motors. This involved creating a 3D rendered
+                  simulation of the installation that could interface with our
+                  control software, allowing us to test patterns and timings
+                  before the installation was physically built.
                 </p>
               </div>
             </div>
@@ -395,14 +411,16 @@
             <div class="row margintop-sm">
               <div class="col-sm">
                 <p>
-                  While working at Devicist, I designed the structure, light
-                  patterns, and interaction of a hub of LED matrix panels inside
-                  a model brain. It was produced in collaboration with Globacore
-                  Interactive for an exhibit at CES 2023. The biggest challenge
-                  was creating a pipeline for pattern generation on a 3D
-                  dimensional LED surface. I developed a multi-step process in
-                  Touchdesigner to convert video frames into pixel data that was
-                  then interpreted by the Arduino driving the LED matrices.
+                  While working at Devicist, we were hired to create an
+                  interactive 3D display to be installed inside a translucent
+                  model brain. I designed a rectanglular prism of LED matrices,
+                  its housing, and light patterns that were touch responsive. It
+                  was produced in collaboration with Globacore Interactive for
+                  an exhibit at CES 2023. The biggest challenge was creating a
+                  pipeline for pattern generation on a 3D dimensional LED
+                  surface. I developed a multi-step process in Touchdesigner to
+                  convert video frames into pixel data that was then interpreted
+                  by the Arduino driving the LED matrices.
                 </p>
               </div>
 
