personal statement update

--- a/personal-statement.html
+++ b/personal-statement.html
@@ -129,28 +129,34 @@
                 program. The realities of COVID-19 resulted in the University
                 mandating a year's worth of independent exploration. I want to
                 experience the joys of parallel work and play again, and I think
-                Future Sketches is a place where I could find that. The resource
-                at MIT that is most exciting to me is the people, and the Future
-                Sketches group fosters a space for wonderful people who have
-                playful and creative ideas.
+                Future Sketches is a place where I could find that. It looks
+                like the Future Sketches group fosters a space for wonderful
+                people who have playful and creative ideas and I want to be a
+                part of that.
                 <br /><br />
-                Currently, I am interested in removing barriers to the creative
-                process when working with technologies external to a computer.
-                Adapting software and code to interface with the real world has
-                been the largest barrier that I’ve encountered, and I have
-                benefited greatly from the hard work of generous strangers
-                online to overcome them. One tool I’d like to build is for LED
-                pixel mapping onto 3D objects. This process when done solely in
-                an Arduino IDE can be complex and inaccessible since designing
-                light patterns for unusual surfaces can be difficult to create
-                without vizualization. I’m interested in developing a tool that
-                projects video content and generative patterns onto a virtual
-                representation of a 3D object. This in turn, translates in real
-                time to the physical object. I’ve accomplished a multi-step
+                What has me most excited about Future Sketches is the emphasis
+                on creating open source tools and the reach that they could have
+                by association with MIT. I’ve benefitted greatly from tools
+                built by the maker community and I would be excited to use the
+                knowledge and experience I’ve gathered to make tools that solve
+                challenges I’ve discovered in my practice. Currently, I am
+                interested in removing barriers to the creative process when
+                working with technologies external to a computer. One tool I’d
+                like to build is for LED pixel mapping onto 3D objects. This
+                process when done solely in an Arduino IDE can be complex and
+                inaccessible since designing light patterns for unusual surfaces
+                can be difficult to create without vizualization. I’m interested
+                in developing a tool that projects video content and generative
+                patterns onto a virtual representation of a 3D object. I
+                envision a setup guide that involves selecting faces of a 3D
+                object, defining LED locations, and keystoning video or camera
+                capture content onto the object. This in turn, translates in
+                real time to the physical object. I’ve accomplished a multi-step
                 process of doing this in Touchdesigner for a project involving a
                 glowing, interactive model of a brain with an internal hub of
-                LEDs. A more intuitive, live updating tool could eliminate the
-                barrier between ideas and reality.
+                LEDs, but I see a need for a more intuitive, live updating tool
+                that could speed up the development of light-based art and
+                installation, eliminating the barrier between ideas and reality.
                 <br /><br />
                 The second tool that I’d be excited to create is one to help
                 interface with obsolete pen plotters and dot matrix printers
@@ -170,10 +176,10 @@
                 would allow something like an Arduino to easily interface with a
                 wide range of old tech in a similar way that the FastLED library
                 brings easy functionality to a wide range of LED chips. The
-                community of makers and hackers who repurpose these old machines
-                is small. Everyone has their own process of reviving them and I
-                would be excited to contribute to the effort to modernize
-                beautiful and useful old tools.
+                community of makers and hackers who re-purpose these old
+                machines is small. Everyone has their own process of reviving
+                them and I would be excited to contribute to the effort to
+                modernize beautiful and useful old tools.
                 <br /><br />
                 Engaging with technology in a fun and untethered environment is
                 the best way to imagine possibilities that may otherwise be
